fix spacing for projects on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,8 @@
     margin-left:2rem;
     margin-right:2rem;
   }
+
+  html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+  }
